# WorkShop-ETL

./: README.md  connectionDB.py  pyproject.toml
EDA/: cleaning_data.ipynb
